--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/lodash": "^4.14.202",
     "cypress": "^13.6.6",
     "lodash": "^4.17.21",
+    "msw": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-window": "^1.8.10"
